# pgmentor

./: .gitignore  README.md  pyproject.toml
pgmentor/: __init__.py  analyze_query.py  cli.py  configurator.py  db.py  linux_helpers.py  metrics.py  output.py  pgparams.py
